# Process this file with automake to produce Makefile.in (in this,
# and all subdirectories).
#
# Copyright 2015 Steven Stewart-Gallus
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
# implied.  See the License for the specific language governing
# permissions and limitations under the License.
EXTRA_DIST+=\
  %D%/json-cc-files.py\
  %D%/json-cc.py\
  %D%/configure-cgcc\
  %D%/json-cc-flags.py\
  %D%/archs/configure-arm-linux-gnueabihf\
  %D%/archs/configure-x86_64-w64-mingw32\
  %D%/archs/configure-arch\
  %D%/archs/configure-i686-w64-mingw32\
  %D%/archs/configure-arm-linux-gnueabi\
  %D%/archs/configure-powerpc64le-linux-gnu\
  %D%/archs/configure-aarch64-linux-gnu\
  %D%/archs/configure-powerpc-linux-gnu\
  %D%/archs/configure-arm-linux-androideabi\
  %D%/archs/configure-x86_64-linux-gnu\
  %D%/archs/configure-i686-linux-gnu\
  %D%/archs/configure-i686-linux-musl\
  %D%/archs/configure-x86_64-linux-musl\
  %D%/configure-json-cc\
  %D%/configure-goto-cc
